@@ -1,7 +1,7 @@
 Package: RVowpalWabbit
 Title: R Interface to the Vowpal Wabbit
-Version: 0.0.8
-Date: 2016-10-16
+Version: 0.0.9
+Date: 2017-03-05
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Author: Dirk Eddelbuettel <edd@debian.org>
 Description: The 'Vowpal Wabbit' project is a fast out-of-core learning
@@ -18,4 +18,4 @@ SystemRequirements: The Boost 'program_options' library (http://boost.org) is re
 OS_type: unix
 License: GPL (>= 2)
 URL: https://github.com/JohnLangford/vowpal_wabbit/ http://dirk.eddelbuettel.com/code/rcpp.html
-BugReports: https://github.com/eddelbuettel/rvowpalwab/issues
+BugReports: https://github.com/eddelbuettel/rvowpalwabbit/issues
