@@ -1,3 +1,15 @@
+2017-03-05  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Release 0.0.9
+
+	* src/R_vw.cpp (Rvw): Simplified via Rcpp Attributes
+	* R/vw.R (vw): Now calls auto-exported function
+
+	* src/init.c (R_init_RVowpalWabbit): Call R_registerRoutines() and
+	R_useDynamicSymbols()
+
+	* NAMESPACE: Use .registration=TRUE on useDynLib
+
 2016-10-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Version 0.0.8
